--- a/_posts/2022-06-01-PQ-徐志榮捍拒-國黨今決議暫緩徵召-朱立倫威信倍受質疑.html
+++ b/_posts/2022-06-01-PQ-徐志榮捍拒-國黨今決議暫緩徵召-朱立倫威信倍受質疑.html
@@ -24,11 +24,11 @@ author: 霍布斯潘
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c85e324e-有意參選苗栗縣長的苗栗縣議長鍾東錦。圖／中央社。.jpg" alt="" class="wp-image-103197" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c85e324e-有意參選苗栗縣長的苗栗縣議長鍾東錦。圖／中央社。.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c85e324e-有意參選苗栗縣長的苗栗縣議長鍾東錦。圖／中央社。-300x188.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c85e324e-有意參選苗栗縣長的苗栗縣議長鍾東錦。圖／中央社。-768x482.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>有意參選苗栗縣長的苗栗縣議長鍾東錦。圖／中央社。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c85e324e-有意參選苗栗縣長的苗栗縣議長鍾東錦。圖／中央社。.jpg" alt="" class="wp-image-103197" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c85e324e-有意參選苗栗縣長的苗栗縣議長鍾東錦。圖／中央社。.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c85e324e-有意參選苗栗縣長的苗栗縣議長鍾東錦。圖／中央社。-300x188.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c85e324e-有意參選苗栗縣長的苗栗縣議長鍾東錦。圖／中央社。-768x482.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>有意參選苗栗縣長的苗栗縣議長鍾東錦。圖／中央社。</figcaption></figure></div>
 
 
 
-<p>不過，現任苗栗縣議長的鍾東錦也有意參選，但國民黨中央認為由於鍾東錦有殺人強姦未遂等前科，有意將他排除徵召，對此，鍾東錦召開記者會來澄清，但是他在接露自己過往時不斷口出狂言。他說出<strong>「拿西瓜刀砍人只是順便」</strong>、<strong>「腸子外露只是輕傷」</strong>、<strong>「舉報他殺人或強姦證據發送 10 萬元檢舉獎金」</strong>、<strong>「讀書到現在只參加名為中國國民黨的幫派」</strong>、<strong>「當年不知道對方已婚，被告妨害家庭，不過通姦罪現已除罪」</strong>、<strong>「曾被抓去管訓，但按照執政黨說法應是坐黑牢」</strong>，被外界形容越描越黑。</p>
+<p>不過，現任苗栗縣議長的鍾東錦也有意參選，但國民黨中央認為由於鍾東錦有殺人強姦未遂等前科，有意將他排除徵召，對此，鍾東錦召開記者會來澄清，但是他在揭露自己過往時不斷口出狂言。他說出<strong>「拿西瓜刀砍人只是順便」</strong>、<strong>「腸子外露只是輕傷」</strong>、<strong>「舉報他殺人或強姦證據發送 10 萬元檢舉獎金」</strong>、<strong>「讀書到現在只參加名為中國國民黨的幫派」</strong>、<strong>「當年不知道對方已婚，被告妨害家庭，不過通姦罪現已除罪」</strong>、<strong>「曾被抓去管訓，但按照執政黨說法應是坐黑牢」</strong>，被外界形容越描越黑。</p>
 
 
 
