--- a/_posts/2022-06-01-PQ-丹麥建全球首座風力能源島-綠能轉型-降低依賴俄羅斯.html
+++ b/_posts/2022-06-01-PQ-丹麥建全球首座風力能源島-綠能轉型-降低依賴俄羅斯.html
@@ -41,7 +41,7 @@ author: 李熱葵
 
 
 <figure class="wp-block-embed is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
-<iframe title="Denmark’s first artificial energy island will power 3 million homes" src="https://www.youtube.com/embed/bbjM6IM67S8?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe loading="lazy" title="Denmark’s first artificial energy island will power 3 million homes" src="https://www.youtube.com/embed/bbjM6IM67S8?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div><figcaption>丹麥能源島示意影片：丹麥首座能源島可供應三百萬家戶（影片／Euronews Youtube）</figcaption></figure>
 
 
