Update VOCUS 2022-06-03 patch

--- a/_posts/2022-06-02-VOCUS-綠之歌-收集群風-青澀少女的呢喃.html
+++ b/_posts/2022-06-02-VOCUS-綠之歌-收集群風-青澀少女的呢喃.html
@@ -41,4 +41,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/428d6962-a6c5-4153-a11f-9a6ba8871245.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">在《綠之歌-收集群風-》中我可以感覺到圖畫之美和對細野晴臣的熱愛，還有音樂寄託的情感，但是我看不到漫畫性甚至有點讓人錯愕，像極我買了一本小說翻開以後才發現它是散文作品這般，故事的鋪墊和漫畫中動態性跟連續性是這本《綠之歌-收集群風-》很大的問題。</div>
 <div class="draft-block draft--p left">以支持台灣創作與漫畫家的角度，還有關於高妍高水準的作畫我會推薦這部漫畫，但以一位看動畫漫畫多年的觀眾與讀者，我認為這部《綠之歌-收集群風-》仍有很多不足之處，過度拘泥在畫面美感而毫無劇情張力這點實在是硬傷，高妍在創作路上還很年輕，在初試之中，也期待她未來可以克服這樣的缺點讓其漫畫變得更好，更讓人記憶深刻。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/x4hBtsYp4tM"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/x4hBtsYp4tM"></iframe></div>
