--- a/_posts/2022-06-03-PQ-陸委會民調-82.2-贊成兩國互不隸屬-近9成反對中共打壓.html
+++ b/_posts/2022-06-03-PQ-陸委會民調-82.2-贊成兩國互不隸屬-近9成反對中共打壓.html
@@ -12,7 +12,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/49632ab9-擷取-1024x766.png" alt="" class="wp-image-103287" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/49632ab9-擷取-1024x766.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/49632ab9-擷取-300x224.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/49632ab9-擷取-768x574.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/49632ab9-擷取.png 1289w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>陸委員會公布最新民調，近 9 成民眾反對中共長期對我外交打壓，高達 82.2% 民眾贊成政府主張「中華民國與中華人民共和國互不隸屬」是兩岸客觀現實，也是當前台海現狀／圖：陸委會臉書。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/49632ab9-擷取-1024x766.png" alt="" class="wp-image-103287" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/49632ab9-擷取-1024x766.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/49632ab9-擷取-300x224.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/49632ab9-擷取-768x574.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/49632ab9-擷取.png 1289w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>陸委員會公布最新民調，近 9 成民眾反對中共長期對我外交打壓，高達 82.2% 民眾贊成政府主張「中華民國與中華人民共和國互不隸屬」是兩岸客觀現實，也是當前台海現狀／圖：陸委會臉書。</figcaption></figure></div>
 
 
 
