Update VOCUS 2022-06-04 patch

--- a/_posts/2022-06-03-VOCUS-段子-六月三日那場火.html
+++ b/_posts/2022-06-03-VOCUS-段子-六月三日那場火.html
@@ -8,4 +8,83 @@ tags: blog
 author: 私の部屋：世界、歷史、人生的万華鏡
 ---
 
-<p><br></p>
+<blockquote>舞台上，燈光逐漸調亮，定睛一瞧，方桌、長椅，兩個說書的，一高一矮、一老一少、一黑一白（黑白無常？）。</blockquote>
+<p>說書人甲：我說……</p>
+<p>說書人乙：你說……</p>
+<p>說書人甲：我說……「那女孩對我說，說我保護她的夢……」</p>
+<p>說書人乙：什麼！</p>
+<p>說書人甲：啊！抱歉，忘記把耳機拿下來！（裝模作樣一番）好，話說呢，在近九十年前，有一款號稱世界上最濃、最醇，又很香的煙品，名喚「Belomorkanal」，中文稱作「白海 - 波羅的海通道」。這款香菸在過去的鐵幕國度相當受到勞工朋友的歡迎，更被視為是地球上最強的捲煙之一。而且依生產版本的不同，每支香菸含有1.5到1.7毫克的尼古丁，以及27至32毫克的焦油！嗯哼，對照起市售常見的香菸品牌嘛，什麼「中淡軟盒」、「碳水化合」……</p>
+<p>說書人乙：咳咳，別鬧了！（拍了一下甲的肩膀，然後轉向觀眾）以上是「六三禁煙節」的開場白。</p>
+<p>說書人甲：對啦，言歸正傳，在距今183年之前，也就是清王國道光十九年，己亥年的四月廿二日，換算西曆則是西元1839年的6月3日。時任清國禁煙政策的推手，欽差大臣林則徐，由於不忍神州樂土上那數以百萬計的老百姓，一步步沉淪於死老外……</p>
+<p>說書人乙：是，主要以不列顛「邪惡死老外」帝國為主！</p>
+<p>說書人甲：沒錯，由「邪惡死老外」帝國所引進的鴉片煙，讓清國國庫裡的白銀大量流入蠻邦之手，更使國力顯著下滑，簡直就快被鴉片的可怖魔爪給踩死了……</p>
+<p>說書人乙：所以中國人又名「踩你死」！我踩你死！我踩你死！（激動跺腳）</p>
+<p>說書人甲：容我提醒您，請不要脫稿演出，謝謝，這不是「有趣的演講」。</p>
+<p>說書人乙：（麥克風被消音）（但看起來是要表演「踩你死」功夫）</p>
+<p>說書人甲：在秉持著洋人荼毒未滅、巨龍國將亡矣的信念下，林則徐獲得了道光皇帝的支持，下令在東莞虎門，以石灰混入海水，浸化鴉片的方式，公開銷毀了先前被清國官方所沒收的所有鴉片。同時林則徐更邀請不少駐地外國記者和使節前來「共襄盛舉」，一同見證這歷史性的一刻……</p>
+<img src="https://images.vocus.cc/24794a70-db27-4311-8afc-4600a430f1f9.jpg">
+<p>說書人乙：據說這場大規模的銷煙行動，林則徐可不是說說而已，也不是發個通告，開個國務院記者會就算了喔！前前後後，銷煙持續了將近23天，虎門行動總共處理了多達19,187箱，總計「237萬6254斤」的鴉片呢！</p>
+<p>說書人甲：Bravo！此舉可說讓大多不抽鴉片，可心疼同胞墮落的中國人感到士氣大振，更推崇林則徐為天下難得，敢正面與死老外抗衡，伸張正義的民族英雄！</p>
+<p>說書人乙：然也！記得有句話，後來是這麼說的，「我驕傲，我是中國人！」</p>
+<p>說書人甲：是，縱然幾十年後中國改朝換代，溥儀換成袁世……孫中山，可中華民國政府為了要提醒國人吸菸過量、亡國滅種的壞處，並緬懷林則徐當年英勇抗外的事蹟，也就把6月3日訂定為「禁煙節」，從禁鴉片之類的「煙毒」，進而鼓勵大家戒掉香菸；至於在中華人民共和國方面，官方今日也定調林則徐為民族的救星！革命反動的先驅者！</p>
+<img src="https://images.vocus.cc/4be66fdb-b52a-47cf-be44-ba878dc011a8.png">
+<p>說書人乙：（高舉雙手）林則徐！凍蒜！林則徐！凍蒜！「踩你死」！加油！</p>
+<p>說書人甲：是，容我再次提醒您，不要牽涉敏感的政治話題。但話說回來，您真以為把鴉片浸泡在水裡，完成了銷毀的儀式之後，就此神州天下太平、國富民強了嗎？</p>
+<p>說書人乙：（轉頭看著甲）我驕傲，我...</p>
+<p>說書人甲：當時清國擁有將近八十萬人的常備軍，兵力規模在當時算的上是數一數二的超級軍武大國，可是高層將領卻缺少了居安思危的概念，常以敷衍了事的態度來看待平時的演練，因此放眼中原，軍部盡是一些訓練不足，又缺少實戰經驗的非即戰力兵種。</p>
+<p>說書人乙：聽說清國海軍的防衛思維主要是以……防海賊為己任，士兵們所持有的「鳥銃」等西洋火槍仿造品，更是從明國一路延續下來的。</p>
+<p>說書人甲：雖然英國派駐在清國的兵力，海、陸兩軍合計尚不及兩萬，但歷經「工業革命」的洗禮之下，英國武器製造技術之躍進已是「等比級數」的進展，不再只是昔日慘敗成吉思汗鐵蹄下的吳下阿蒙，不列顛海軍更儼然是全球水師之霸！</p>
+<p>說書人乙：但英國皇家海軍輸給了強尼……傑克．史派羅船長啊！（得意地看著訴訟官司出爐，咦？）</p>
+<p>說書人甲：（當作沒聽到）相較之下，清國官場「重文輕武」的風氣，讓軍人的地位低下、薪餉微薄，多數人甚至還要以打零工或從事副業才得以餬口養家；但由於清國軍人還兼具著維持治安的警察職能，所以部分地區竟然出現了軍人監守自盜、搜刮民脂民膏的情況！</p>
+<p>說書人乙：（認真樣）林則徐的認真執法與鐵腕掃蕩，以及稍後英商轉入黑市交易的小動作不斷，清國道光帝於是下旨斷絕與英國的貿易往來。但此舉卻也惹火了在亞洲經貿圈向來通行無阻的英國商人，內閣歷經辯論、協商後，決定採取國家級的軍事力量來保護英商的商業利益！國會更以271票對262票的些微差距，在下議院通過議案，正式以商業報復（reprisal）的名義，未經宣戰，直接授權東方遠征軍開拔清國！</p>
+<img src="https://images.vocus.cc/262652b8-8b14-415a-9c5d-99bc930e6c3c.jpg">
+<blockquote>「夫震英咭唎之名者，以其船堅砲利而稱其強，其奢靡揮霍而艷其富。不知該夷兵船笨重，吃水深數丈，只能取勝外洋。」</blockquote>
+<p>，林則徐《密查夷情嚴防各口堅持繳煙交兇情形片》（1839）</p>
+<p>說書人甲：西元1840年6月，方距離虎門銷毀鴉片不久，來勢洶洶的英國艦隊終於抵達了廣州沿海，共有軍艦16艘、武裝輪船4艘、運輸艦28艦、陸軍4,000人。此時此刻，英國只封鎖口岸，尚未進攻，很快又北上轉往浙江……（抓頭）清國的解讀是，蠻夷英咭唎其實正畏懼著林則徐固若金湯的設防。</p>
+<p>說書人乙：且慢，我馬上下注，（停頓了幾秒）賭甚麼都好，鴉片戰爭客隊輸、客隊輸，讓分。</p>
+<p>說書人甲：（面帶微笑）不到一年的時間，西元1841年5月下旬，今日被稱為「第二次廣州之戰」的關鍵會戰裡，英軍以死傷77人，9死68傷的代價，霸氣完勝了兩萬清軍！廣州鄰近要地全失，城外大火，更有平民百姓出面迎接英國軍人！清國毫無懸念地吞下了史無前例的大敗仗！</p>
+<p>說書人乙：（緊張兮兮）且慢！稍等！我剛才的話通通不算，那是假借我的IP位置發言的！不是我，是假帳號！是誰？是你嗎？（轉頭望向台北市信義區某條路的1號）</p>
+<p>說書人甲：（冷笑）就說你會作弊，你們那邊很多人都在作弊，而且很好笑的是，每次作弊都會剛好被抓到。（不失禮貌的微笑）</p>
+<p>說書人乙：（抓頭、拉了一下褲子）誰？你說誰？厚！話不能亂講啦！</p>
+<img src="https://images.vocus.cc/7abc8919-c63a-4063-9772-f01be2ebe262.jpg">
+<p>說書人甲：然而，當下讓吾輩搖頭嘆息的是，領頭的將領，堂堂出身愛新覺羅宗室的將軍奕山，明明都已經舉白旗投降了，他居然還快馬回報朝廷，說自己用兵威武，狂勝英軍！左一句「逆夷號呼之聲遠聞數里」，右一句「逆夷被擊及溺水死者不計其數」，都來自於奕山奏稱。</p>
+<img src="https://images.vocus.cc/f2c96066-4821-4eab-8f6d-dbb680dffe1d.jpg">
+<p>說書人乙：是，那個時候紫禁城內沒有「事實查核中心」，只有「拍馬屁中心」。</p>
+<p>說書人甲：（小聲）你那裡也是……</p>
+<p>說書人乙：（心虛的不說話）</p>
+<img src="https://images.vocus.cc/bf17baaf-0f2b-4790-9573-193a0429c52e.png">
+<p>說書人甲：最後，如同國二下學期，八年級學生所使用，第四冊歷史課本裡所寫到的，在英軍一路狂追猛打，兵臨南京，預備開炮攻城的嚴峻情勢之下，過去唯我獨尊的清國，道光帝也只得被迫向英人低頭，更進一步差遣全權代表，於英軍旗艦上簽訂了中土近代歷史上的第一個不平等條約《南京條約》，那天，是西元1842年的8月29日。</p>
+<img src="https://images.vocus.cc/abd18153-d154-4010-b38e-3e0c8c09f3a4.jpg">
+<p>說書人乙：對，我記得條約內容除了要賠錢（二千一百萬銀圓）、割地（永久割讓香港島予大英治理）外，還要開放通商口岸（廣州、福州、廈門、寧波、上海五處港口），准英國人在港口自由貿易，不經行商，等於是逐步開放國家的主權！</p>
+<p>說書人甲：可說來諷刺的是，當時清國在北京城內的幾位重臣們，天真以為《南京條約》將替清國帶來豐富滿溢的額外稅收，同時更能讓神州擺脫鎖國狀態，大幅邁進，擁抱世界與接軌國際！</p>
+<p>說書人乙：據說不少官員還特別上書讚譽，這《南京條約》一簽，地（租界）開放，貨出去，人進來，清國發大財！才是有效管理死老外們的雙贏方法呢！</p>
+<p>說書人甲：（眼睛睜大）咦？我怎麼覺得聽起來有點熟悉？</p>
+<blockquote>「從民族的歷史看，鴉片戰爭的軍事失敗還不是民族致命傷。失敗以後還不明了失敗的理由力圖改革，那才是民族的致命傷。」</blockquote>
+<p>，蔣廷黻《中國近代史》（1938）</p>
+<p>說書人乙：英軍這下打了勝仗，凱旋而歸，又拿了一拖拉庫好處之後，其他的死老外，各個看了也是分外眼紅，你有我也當然要有，於是也一一跟進，也假借名目理由，來要求和清國簽約；而且外國勢力逮住機會，越簽越多，不停加碼，連無法管制蠻夷在華違法行為的「治外法權」、「領事裁判權」都一併湊上，毫不客氣地搬上談判桌！</p>
+<p>說書人甲：是啊，諸多不平等條約強加在中國人身上的枷鎖，一直要等到西元1943年左右，隨著《中英關於取消英國在華治外法權及其有關條約與換文》、《中美新約》等條約的簽定，才總算全數得以廢除。但那個時候，清國早已從歷史舞台上謝幕啦！（雙手一攤）</p>
+<p>說書人乙：（有感而發）欸！這裡要補充說明一下，前面講的「邪惡死老外」，其實帶著歧視性或批判性的字眼，若有侵犯之處，還請各位看倌們見諒（鞠躬）；但也因為「邪惡死老外」的武裝實力異常堅強，一列一列、一隊一隊，連番入侵中土，除了劃分經貿勢力圈，論軍備、論樣貌，都像現在「漫威」或「DC」宇宙裡的超級英雄那麼厲害，所以我們呢，給了「邪惡死老外」一個特別的稱呼…</p>
+<p>說書人甲：（毫無遲疑）「美國隊長」！</p>
+<p>說書人乙：（驚慌失措）美……不是啦！只有兩個字！（示意後方的工作人員趕快去拿「中美合作」的海報）</p>
+<p>說書人甲：（遲疑了一下）「索爾」？</p>
+<p>說書人乙：（驚慌失措）得了，雷神索爾第四集《Thor: Love and Thunder》要上映了（示意後方的工作人員趕快去拿電影海報），是列強、列強，抵華「八國聯軍」被稱作「列強」！裡頭有「餓的話每日熬一鷹」……</p>
+<p>說書人甲：（恍然大悟）喔，原來是俄羅斯、德意志、法蘭西、美利堅、日本帝國、奧地利、義大利跟英吉利，這八個國家。</p>
+<p>說書人乙：是，其中德意志、英格蘭、美利堅，不只過去賣鴉片，現在也跟著賣疫……</p>
+<p>說書人甲：容我第三次提醒您，不要牽涉敏感話題，不然帳號會被……</p>
+<p>說書人乙：是，六三禁煙節……</p>
+<p>說書人甲：吸煙過量，有礙健康。</p>
+<p>說書人乙：對了，聽名嘴或社群的內幕爆料，說肺炎有很多黑幕，甚麼疫苗炒股啦、確診蓋牌啦……</p>
+<p>說書人甲：（瞪了乙一眼）咳！沒有智慧判斷假訊息，同樣，有礙健康。</p>
+<p>說書人甲：（直接走過去抓著乙）祝各位身體健康，全球肺炎疫情早日趨緩，咱們下台一鞠躬。（對台下觀眾鞠躬致意）</p>
+<img src="https://images.vocus.cc/0d02f3a2-735b-4e4c-a25f-3b9ff4a9c695.jpg">
+<p>尾聲：</p>
+<p>燈光慢慢變暗，舞台上，工作人員搬走方桌，說書的兩人正準備休息離開。</p>
+<p>說書人乙：欸欸，我這裡有一批上等的快篩好貨，原裝進口的喔，但來源不能透漏，也沒辦法給你產地證明，留給兄臺您跟嫂子，沒事篩個萬事如意、身體健康！</p>
+<p>說書人甲：我還大富大貴、滿室生香哩！告訴你，我跟你大嫂已經藉由實名制買到了快篩試劑，一人一盒，第二輪快篩訂購措施預計六月六月開始實行，每間藥局的單日配送量將從78份提升為117份，全國4826家健保特約藥局及79個偏鄉衛生所都可以買到。疫情撲朔迷離，想要長命百歲，先落實自我健康管理啦，口罩一樣帶著，酒精同樣備著，你那好貨就留給其他人吧。</p>
+<img src="https://images.vocus.cc/9f3efe92-adf6-4e36-b5ea-cec207febcb7.webp">
+<p>說書人乙：咦？您怎麼有衛教宣導的感覺呢？</p>
+<p>說書人甲：（緩緩摘下面具）</p>
+<p>說書人乙：（大驚失色）您、您、您怎麼來了！</p>
+<p>圖文來源、一併致謝：</p>
+<p><a href="https://en.wikipedia.org/wiki/First_Opium_War">https://en.wikipedia.org/wiki/First_Opium_War</a></p>
+<p><a href="https://www.boredpanda.com/tobacco-teeth/?utm_source=google&utm_medium=organic&utm_campaign=organic">https://www.boredpanda.com/tobacco-teeth/?utm_source=google&utm_medium=organic&utm_campaign=organic</a></p>
