--- a/_posts/2022-06-03-INITIUM-抹去与传承-33年后-香港的六四记忆之战.html
+++ b/_posts/2022-06-03-INITIUM-抹去与传承-33年后-香港的六四记忆之战.html
@@ -5,10 +5,10 @@ date: 2022-06-03 15:00:00.000000000 +00:00
 link: https://theinitium.com/article/20220604-hongkong-reconstructing-june-fourth-memory/
 categories: initium
 tags: blog
-author: 杨子琪
+author: 特约撰稿人 羊紫紫 发自新加坡
 ---
 
-<p>「“要抹去香港人的记忆，需要多久时间？”但我们知道，有人仍在努力守护真相。」</p><p>特约撰稿人 羊紫紫 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220604-hongkong-reconstructing-june-fourth-memory/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/06/7768d9188c784e319cb4d62f4b685852.jpg?imageView2/1/w/1080/h/810/format/jpg" alt="前《铿锵集》记者Rachel（化名）保留著以前参加六四烛光集会的蜡烛。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「“要抹去香港人的记忆，需要多久时间？”」</p><p>特约撰稿人 羊紫紫 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220604-hongkong-reconstructing-june-fourth-memory/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/06/7768d9188c784e319cb4d62f4b685852.jpg?imageView2/1/w/1080/h/810/format/jpg" alt="前《铿锵集》记者Rachel（化名）保留著以前参加六四烛光集会的蜡烛。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">前《铿锵集》记者Rachel（化名）保留著以前参加六四烛光集会的蜡烛。<span class="credit">摄：林振东/端传媒</span></figcaption></figure><p>民主女神像失了踪。安家在香港中文大学山脚11年，她在2021年12月24日天未亮时，被校方悄无声息抬走。校生赶到，广场上只剩下一个方框痕迹。今年六四，她第一次缺席了。<br><br>中大学生Luna（化名）强调，民女是“被偷走”的。她说民女温柔而坚实，是校园内外公共的连系。这份连系不能断，Luna就和几个同学制作3D迷你民女雕像，放在校园不同角落，呼吁同学把这些承载着六四回忆的小雕像寻找出来，延续这份记忆。<br><br>记忆来自1989年，黑夜里的北京，军队开枪镇压示威民众，香港人彻夜难眠。那一年，有青年大学生、记者北上支援、报导运动，年纪更轻的孩子在电视机前、或在家人的眼泪中，目睹时代的转折。<br><br>33年后的今天，他们之中，有人加入支联会，坚持悼念六四，甚至身陷囹圄；有人成为记者，报导六四直到不可报导；有人做了老师，教书育人，却再不敢向学生多谈“敏感”历史；有人成了学者，研究香港人为何忘不了六四。<br><br>历史曾在千里之外，记忆在香港落地生根。超过30年的纪念行动，成了属于香港的历史和记忆。九七主权移交后，随政经局势变化，传承六四记忆本已面临更多困难；国安法后，公民社会急遽萎缩，维园再被封锁。从公共空间到法庭，从传媒到教育环境，在记忆与遗忘之间，我们将走向哪里？</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220604-hongkong-reconstructing-june-fourth-memory/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/06/4e949e006f644baf824d39f1b686d8f5.jpg?imageView2/1/w/1080/h/810/format/jpg" alt="2021年12月24日，中大民主女神像被拆除后，平安夜晚上有市民、中大学生及校友到民主女神像原址燃点蜡烛悼念。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2021年12月24日，中大民主女神像被拆除后，平安夜晚上有市民、中大学生及校友到民主女神像原址燃点蜡烛悼念。<span class="credit">摄：林振东/端传媒 </span></figcaption></figure>
