--- a/_posts/2022-06-04-INMEDIA-六四33-不斷更新-連續第三年被封的維園.html
+++ b/_posts/2022-06-04-INMEDIA-六四33-不斷更新-連續第三年被封的維園.html
@@ -9,9 +9,31 @@ author: 獨媒報導
 ---
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/202206043.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>今日是六四事件33週年，亦是本港沒有合法的集會的連續第三年，過去三年，康文署及警方亦同時行使權力，在六四封閉維園。</p>
-<p>▌<a href="https://bit.ly/3MpJx3y">六四印記被消失 家長嘆：留下就一定要麻木</a><br />
+<p>▌<a href="https://bit.ly/3x9R3tF">市民穿黑衣獨自到維園默站：同路人自會明白</a><br />
+▌<a href="https://bit.ly/3teumDA">駐港公署「溫提」 多國駐港領事照出post提六四</a><br />
+▌<a href="https://bit.ly/3x9R3tF">市民穿黑衣獨自到維園默站：同路人自會明白</a><br />
+▌<a href="https://bit.ly/38ODyHz">馬英九六四發帖 稱應「反求諸己」、民進黨治下台灣變「不自由的民主」</a><br />
+▌<a href="https://bit.ly/3mbLO7N">前支聯會常委趙恩來攜鮮花到銅鑼灣 警員要求離開</a><br />
+▌<a href="https://bit.ly/3MpJx3y">六四印記被消失 家長嘆：留下就一定要麻木</a><br />
 ▌<a href="https://bit.ly/3zjdDmo">中大現「為什麼？因為這是我的職責」橫額 即被保安清除</a><br />
 ▌<a href="https://bit.ly/3xjkJ93">前學聯代表陳清華中聯辦外海濱亮燈悼六四 稱前人犧牲「成為人類追求自由的典範」</a></p>
+<p>(17:58) 警方持續於銅鑼灣一帶截查市民，身穿黑衣、背囊上插著一支白色菊花的劉先生，被10多名警員包圍並搜身，有警員以電筒照射他的背包，「搜出」一支白花和一把黃傘，約五分鐘後獲准離開。劉先生向記者表示，攜花只是「自由意志」，他又質疑警方向他搜身的動機：「今日（六四）喺悼念嘅日子，一個人嚟都畀人打壓。」他又慨嘆：「喺香港地，佢鐘意畀一啲罪名你都冇辦法。」</p>
+<p><strong>「劉公子」劉定成現身銅鑼灣</strong></p>
+<p>(17:54) 近下午四時半，富商「劉公子」劉定成身穿印有花朵的黃色上衣，現身銅鑼灣記利佐治街。他強調「為信念從未退後，風雨中抱緊自由」，又認為「唔出黎對唔住自己，冇野可以改變我嘅初衷⋯⋯人生有幾多個十年，幾多個六四？」</p>
+<p>他表示自己已盡量行裝簡陋，以及隻身一人出現，形容「只有mirror和error陪伴」。他續稱「行街食野冇犯法掛⋯⋯我冇煽惑意圖，心安理得」。並指他其實沒有說服力和影響力，「人哋要點係人哋嘅事」。被問到會逗留多久，他回應會盡量留下並「陪著自己走」。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/c902c1" title="無標題"><img src="https://live.staticflickr.com/65535/52121395744_4585a69f1c_z.jpg" width="640" alt="無標題" /></a></p>
+<p>(16:48) 警方在銅鑼灣崇高百貨外將一名黑衣男子帶上警車。</p>
+<p>(16:40) 警方在利佐治街行人專用區，及東角道金堡中心對出馬路，以橙色封鎖帶圍成「搜身區」，將「可疑人士」，如身穿黑衣、持花的人士等帶入區內搜查。</p>
+<p>近下午四時半，一名身穿印有「香港加油」黃色上衣，及戴上黃色口罩的女士出現東角道記利佐治街交界，手持一疊A4白紙向途人派發，稱白紙代表祝福，但隨即被警員帶入「搜身區」，警方要求她除下帽子檢查其頭髮及登記個人資料。被搜查期間，她繼續向途人派發白紙。</p>
+<p>約10分鐘後，警方將其放行， 她一邊離開「搜身區」，一邊高聲問警員：「我走得啦嘛？我自由喇嘛？」她表示警方要求她不要再派發白紙，但未有交代不能派發白紙的原因：「問極佢都唔答」 ，她續指她向警方表示會將白紙扔掉才獲放行：「我話宜家諗住扔，揾緊圾圾桶」，她又向現場記者詢問垃圾桶的位置。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/NM094q" title="無標題"><img src="https://live.staticflickr.com/65535/52121073076_40864eb94a_z.jpg" width="640" alt="無標題" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/75P2x7" title="無標題"><img src="https://live.staticflickr.com/65535/52121573460_3dd5f42cc6_z.jpg" width="640" alt="無標題" /></a></p>
+<p>(15:40) 下午三時許，一名黑衣的女子遭三位警員截查，該名女子表示剛吃完午飯準備回去工作，並問警員「著黑色衫有罪架？」警員則回應「冇罪架冇罪架」，一邊將女子帶入東角道封鎖線查閱身分證，其後放行。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/yjL521" title="東角道被截查之黑衣女子"><img src="https://live.staticflickr.com/65535/52119977487_62d931a068_z.jpg" width="640" alt="東角道被截查之黑衣女子" /></a></p>
+<p><strong>警方封鎖一段東角道及記利佐治街</strong></p>
+<p>(15:30) 屬往來維園主要通道，以及多年來皆設置街站的東角道及記利佐治街一帶，警方在中午封鎖一段行車線，並劃分區域。傳媒聯絡隊成員登記部分記者資料，並要求記者站入「記者區」，數十名警員及便衣警在場戒備。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/158v6R" title="IMG_2716e"><img src="https://live.staticflickr.com/65535/52121489760_8b7bd0b5c4_z.jpg" width="640" alt="IMG_2716e" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/3VB0n2" title="無標題"><img src="https://live.staticflickr.com/65535/52120957456_ce0a8feb77_z.jpg" width="640" alt="無標題" /></a></p>
 <p>(11:05) 警方提前宣布將維園的足球場、籃球場、中央草坪等部份範圍關閉。早上有市民在維園附近空地晨運，遇上近百警員維園一帶戒備，有市民認為警方杞人憂天，尤其近年言論自由收緊，不會有人潮前往維園悼念。沒有燭光，會否擔心六四會被遺忘，有市民表示六四不只在香港和中國存在，而是屬於全世界。</p>
 <p><strong>連續第二年封閉維園足球場和草地</strong></p>
 <p>維園的足球場、籃球場、中央草坪等部份範圍關閉，並有近百警員在維園一帶戒備。T先生在維園附近的空地做伸展運動，附近有至少20名軍裝警員駐守，他表示每星期都會在維園附近運動，認為警察封鎖維園是杞人憂天，斥警方「 嘥錢開OT」，他解釋隨近年言論自由收緊，已不會有很多人來悼念六四：「宜家都唔係好多人出嚟，都唔會對政府有咩影響啦！」</p>
