--- a/_posts/2022-06-04-INMEDIA-六四33-不斷更新-連續第三年被封的維園.html
+++ b/_posts/2022-06-04-INMEDIA-六四33-不斷更新-連續第三年被封的維園.html
@@ -1,15 +1,17 @@
 ---
 layout: post
 title: "【六四33．不斷更新】連續第三年被封的維園"
-date: 2022-06-04 10:00:00.000000000 +00:00
+date: 2022-06-04 15:30:00.000000000 +00:00
 link: https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E3%80%90%E5%85%AD%E5%9B%9B33%EF%BC%8E%E4%B8%8D%E6%96%B7%E6%9B%B4%E6%96%B0%E3%80%91%E9%80%A3%E7%BA%8C%E7%AC%AC%E4%B8%89%E5%B9%B4%E8%A2%AB%E5%B0%81%E7%9A%84%E7%B6%AD%E5%9C%92
 categories: inmedia
 tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/202206043.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>今日是六四事件33週年，亦是本港沒有合法的集會的連續第三年，過去三年，康文署及警方亦同時行使權力，在六四封閉維園。</p>
-<p>▌<a href="https://bit.ly/3x9R3tF">市民穿黑衣獨自到維園默站：同路人自會明白</a><br />
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/202206047.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>今日是六四事件33週年，亦是本港沒有合法的集會的連續第三年，過去三年，康文署及警方亦同時行使權力，在六四封閉維園。</p>
+<p>▌<a href="https://bit.ly/3MeWsoF">雷玉蓮攜三束花到中聯辦悼六四 警員指或已違國安法</a><br />
+▌<a href="https://bit.ly/3MmhhP0">去年街頭今年舖頭 朱江瑋續派蠟燭：低潮時嘅儀式感好重要</a><br />
+▌<a href="https://bit.ly/3thbDad">天安門母親受監視下拜祭 指維園晚會不再 惟燭光長存</a><br />
 ▌<a href="https://bit.ly/3teumDA">駐港公署「溫提」 多國駐港領事照出post提六四</a><br />
 ▌<a href="https://bit.ly/3x9R3tF">市民穿黑衣獨自到維園默站：同路人自會明白</a><br />
 ▌<a href="https://bit.ly/38ODyHz">馬英九六四發帖 稱應「反求諸己」、民進黨治下台灣變「不自由的民主」</a><br />
@@ -17,15 +19,26 @@ author: 獨媒報導
 ▌<a href="https://bit.ly/3MpJx3y">六四印記被消失 家長嘆：留下就一定要麻木</a><br />
 ▌<a href="https://bit.ly/3zjdDmo">中大現「為什麼？因為這是我的職責」橫額 即被保安清除</a><br />
 ▌<a href="https://bit.ly/3xjkJ93">前學聯代表陳清華中聯辦外海濱亮燈悼六四 稱前人犧牲「成為人類追求自由的典範」</a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/uY5XXi" title="無標題"><img src="https://live.staticflickr.com/65535/52121273461_b9e0d98627_z.jpg" width="640" alt="無標題" /></a></p>
+<p>(20:34) 入夜後，有個別市民自行到維園及銅鑼灣一帶。晚上八時許，警方宣布擴大封鎖整個維園。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/3A052U" title="IMG_5254"><img src="https://live.staticflickr.com/65535/52121847405_6b4d2f1b54_z.jpg" width="640" alt="IMG_5254" /></a></p>
+<p>(19:38) 前屯門區議員甄霈霖及香港野豬關注組幹事黃豪賢全身黑色衣服，並手持「Pogo」坦克車模型途經銅鑼灣記利佐治街，稱「我鍾意砌模型」，兩人隨後被警方搜身及登記個人資料。</p>
+<p>黃豪賢事後表示該盒坦克車模型為共產黨標誌，今日購自深水埗，是翻版的樂高模型，只需28元，又指「純粹覺得佢幾得意幾好玩」才購買，打算將模型轉贈基層兒童。</p>
+<p>對於首年沒有團體申辦六四燭光晚會，黃豪賢直言在現時的社會環境下是預料之內，又指因警方禁止集會才到銅鑼灣觀察環境：「本身我都唔知有六四依件事，警方話呼籲吖嘛，佢話六四禁咗個集會，我如夢初醒 。」</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/C97dux" title="IMG_5240"><img src="https://live.staticflickr.com/65535/52121310178_62b168c0fe_z.jpg" width="640" alt="IMG_5240" /></a></p>
+<p>【劉山青被捕】</p>
+<p>(19:00) 劉山青戴上「悼念六四」口罩，穿著「李旺陽」T恤，欲到維園悼念。警方以廣播警告男子有可能干犯「未經批准集結罪」，稱會將其拘捕。該男子表明不會離開，並要求警方解釋原因。警方其後將男子帶入圍封區域調查，稱會將其拘捕。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/6546G4" title="IMG_5237"><img src="https://live.staticflickr.com/65535/52121518094_4028887dfd_z.jpg" width="640" alt="IMG_5237" /></a></p>
+<p>(18:52) 一名穿白衣手持花束中年男人到維園悼念，遭警方以橙帶包圍，並以廣播警告指其有機會犯「未經批准集結」，並要求男子離開。該男子斥「緊張代表懦弱」、「如果政府可以真誠面對，咁民眾就會擁立你」，接著離開。</p>
 <p>(17:58) 警方持續於銅鑼灣一帶截查市民，身穿黑衣、背囊上插著一支白色菊花的劉先生，被10多名警員包圍並搜身，有警員以電筒照射他的背包，「搜出」一支白花和一把黃傘，約五分鐘後獲准離開。劉先生向記者表示，攜花只是「自由意志」，他又質疑警方向他搜身的動機：「今日（六四）喺悼念嘅日子，一個人嚟都畀人打壓。」他又慨嘆：「喺香港地，佢鐘意畀一啲罪名你都冇辦法。」</p>
 <p><strong>「劉公子」劉定成現身銅鑼灣</strong></p>
 <p>(17:54) 近下午四時半，富商「劉公子」劉定成身穿印有花朵的黃色上衣，現身銅鑼灣記利佐治街。他強調「為信念從未退後，風雨中抱緊自由」，又認為「唔出黎對唔住自己，冇野可以改變我嘅初衷⋯⋯人生有幾多個十年，幾多個六四？」</p>
-<p>他表示自己已盡量行裝簡陋，以及隻身一人出現，形容「只有mirror和error陪伴」。他續稱「行街食野冇犯法掛⋯⋯我冇煽惑意圖，心安理得」。並指他其實沒有說服力和影響力，「人哋要點係人哋嘅事」。被問到會逗留多久，他回應會盡量留下並「陪著自己走」。</p>
+<p>他表示自己已盡量行裝簡陋，以及隻身一人出現，形容「只有 MIRROR 和 ERROR 陪伴」。他續稱「行街食野冇犯法掛⋯⋯我冇煽惑意圖，心安理得」。並指他其實沒有說服力和影響力，「人哋要點係人哋嘅事」。被問到會逗留多久，他回應會盡量留下並「陪著自己走」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/c902c1" title="無標題"><img src="https://live.staticflickr.com/65535/52121395744_4585a69f1c_z.jpg" width="640" alt="無標題" /></a></p>
 <p>(16:48) 警方在銅鑼灣崇高百貨外將一名黑衣男子帶上警車。</p>
 <p>(16:40) 警方在利佐治街行人專用區，及東角道金堡中心對出馬路，以橙色封鎖帶圍成「搜身區」，將「可疑人士」，如身穿黑衣、持花的人士等帶入區內搜查。</p>
 <p>近下午四時半，一名身穿印有「香港加油」黃色上衣，及戴上黃色口罩的女士出現東角道記利佐治街交界，手持一疊A4白紙向途人派發，稱白紙代表祝福，但隨即被警員帶入「搜身區」，警方要求她除下帽子檢查其頭髮及登記個人資料。被搜查期間，她繼續向途人派發白紙。</p>
-<p>約10分鐘後，警方將其放行， 她一邊離開「搜身區」，一邊高聲問警員：「我走得啦嘛？我自由喇嘛？」她表示警方要求她不要再派發白紙，但未有交代不能派發白紙的原因：「問極佢都唔答」 ，她續指她向警方表示會將白紙扔掉才獲放行：「我話宜家諗住扔，揾緊圾圾桶」，她又向現場記者詢問垃圾桶的位置。</p>
+<p>約10分鐘後，警方將其放行， 她一邊離開「搜身區」，一邊高聲問警員：「我走得啦嘛？我自由喇嘛？」她表示警方要求她不要再派發白紙，但未有交代不能派發白紙的原因：「問極佢都唔答」 ，她續指她向警方表示會將白紙扔掉才獲放行：「我話宜家諗住扔，揾緊垃圾桶」，她又向現場記者詢問垃圾桶的位置。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/NM094q" title="無標題"><img src="https://live.staticflickr.com/65535/52121073076_40864eb94a_z.jpg" width="640" alt="無標題" /></a></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/75P2x7" title="無標題"><img src="https://live.staticflickr.com/65535/52121573460_3dd5f42cc6_z.jpg" width="640" alt="無標題" /></a></p>
 <p>(15:40) 下午三時許，一名黑衣的女子遭三位警員截查，該名女子表示剛吃完午飯準備回去工作，並問警員「著黑色衫有罪架？」警員則回應「冇罪架冇罪架」，一邊將女子帶入東角道封鎖線查閱身分證，其後放行。</p>
@@ -42,7 +55,7 @@ author: 獨媒報導
 <p>T先生又指在年輕時有參與維園六四晚會悼念近10次，後來感「悼念六四」成為宣傳政黨及拉票之工具，就再沒再參與悼念，他續指「六四」是悲劇，但身處香港是「冇嘢可以做到」及「某程度上都唔會有咩改變住」。</p>
 <p>被問到會否擔心六四被遺忘，他表示要了解的人可以在網絡上找到相關資料，六四不只在香港、中國存在，而是全世界，「後生一代嘅睇法可能好多都唔同就唔知」。</p>
 <p><strong>舞旗大媽斥過往假借公義悼六四</strong></p>
-<p>早上9時半，黎女士如常每日在維園外舞旗，她表示今早看新聞指維園有大量警員駐守才得知今日是六四，但「唔覺得係一回事」，因為她不是當時人，並非真的知道當時發生的事。對於有大量警員駐守維園，她認為是維持治安的最基本：「搞到亂七八糟（警方）先出嚟又比人鬧，企喺度又比人鬧。」</p>
+<p>早上9時半，黎女士如常每日在維園外舞旗，她表示今早看新聞指維園有大量警員駐守才得知今日是六四，但「唔覺得係一回事」，因為她不是當時人，並非真的知道當時發生的事。對於有大量警員駐守維園，她認為是維持治安的最基本：「搞到亂七八糟（警方）先出嚟又畀人鬧，企喺度又畀人鬧。」</p>
 <p>她指和平悼念是可以的，但不認同用武力去悼念，斥市民以公義之名去悼念六四：「唔洗一定要一大班人囉，宜家叫你做戲咩？話『我哋好多人好公義』，嘥氣啦！」被問到是否認為過往集會的市民均是「做戲」，她指：「我唔敢包，事實上有冇佢就最清楚，係咪真係為六四依件事行出嚟定係柴娃娃，人去你又去 ？」</p>
 <p>警方表示今日會在維園一帶部署足夠警力，迅速果斷執法，包括拘捕，呼籲市民切勿以身試法。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/xn0qk8" title="黎女士"><img src="https://live.staticflickr.com/65535/52121146630_df11c5c037_6k.jpg" width="6144" alt="黎女士" /></a><br /><em>黎女士</em></p>
