--- a/_posts/2022-06-04-INMEDIA-六四33-不斷更新-連續第三年被封的維園.html
+++ b/_posts/2022-06-04-INMEDIA-六四33-不斷更新-連續第三年被封的維園.html
@@ -9,7 +9,11 @@ author: 獨媒報導
 ---
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/202206047.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>今日是六四事件33週年，亦是本港沒有合法的集會的連續第三年，過去三年，康文署及警方亦同時行使權力，在六四封閉維園。</p>
-<p>▌<a href="https://bit.ly/3MeWsoF">雷玉蓮攜三束花到中聯辦悼六四 警員指或已違國安法</a><br />
+<p>▌<a href="https://bit.ly/3MjYpjy">沒有集會沒有支聯會 仍舉起手機燈的人們</a><br />
+▌<a href="https://bit.ly/3zhEJtN">大學生維園外被截查 警：攜「民女」或顯示她參與集結</a><br />
+▌<a href="https://bit.ly/39cLVga">多名中大人民女原址獻花 昨晚未圓湖有人「悼屈原」校方今圍封</a><br />
+▌<a href="https://bit.ly/3GWPLGY">港大悼念傳統不再 校友到國殤之柱原址、太古橋打卡</a><br />
+▌<a href="https://bit.ly/3MeWsoF">雷玉蓮攜三束花到中聯辦悼六四 警員指或已違國安法</a><br />
 ▌<a href="https://bit.ly/3MmhhP0">去年街頭今年舖頭 朱江瑋續派蠟燭：低潮時嘅儀式感好重要</a><br />
 ▌<a href="https://bit.ly/3thbDad">天安門母親受監視下拜祭 指維園晚會不再 惟燭光長存</a><br />
 ▌<a href="https://bit.ly/3teumDA">駐港公署「溫提」 多國駐港領事照出post提六四</a><br />
@@ -19,6 +23,17 @@ author: 獨媒報導
 ▌<a href="https://bit.ly/3MpJx3y">六四印記被消失 家長嘆：留下就一定要麻木</a><br />
 ▌<a href="https://bit.ly/3zjdDmo">中大現「為什麼？因為這是我的職責」橫額 即被保安清除</a><br />
 ▌<a href="https://bit.ly/3xjkJ93">前學聯代表陳清華中聯辦外海濱亮燈悼六四 稱前人犧牲「成為人類追求自由的典範」</a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/3334wF" title="IMG_8891"><img src="https://live.staticflickr.com/65535/52121509058_0f7358a1f1_z.jpg" width="640" alt="IMG_8891" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/E5i147" title="IMG_8889"><img src="https://live.staticflickr.com/65535/52121978135_539a1f62f1_z.jpg" width="640" alt="IMG_8889" /></a></p>
+<p><strong>銀髮族稱被警扯掉口罩  對罵遭斥「阻差辦公」被捕</strong></p>
+<p>一名身穿黑色「香港加油」T shirt 銀髮女士，在晚上9時被警員帶入位於記利佐治街的「搜身區」。女士突然向後躺下，平躺在地上，期後連環怒斥警員：「你有冇廉恥 ？你有冇人性？你係咪人？」、「仲係咪差人、男子漢呀 ？」一名女警與她展開罵戰，女士斥警員扯掉其口罩，要求警方提供新口罩，女警反駁：「係你自己拆爛㗎！」，又斥婆婆「阻差辦公」，並高喊：「我宜家拘捕你」，擾攘約10分鐘後，警方將該女士帶上警車離開。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/u6774D" title="DSCF3236"><img src="https://live.staticflickr.com/65535/52121500503_fbaa152d75_z.jpg" width="640" alt="DSCF3236" /></a><br /><em>陳先生</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/rwu1Hc" title="DSCF3235"><img src="https://live.staticflickr.com/65535/52121470036_572dcde297_z.jpg" width="640" alt="DSCF3235" /></a><br /><em>天后站外</em></p>
+<p>(20:55)現年65歲的劉先生及陳先生，在途徑天后站A2出口時被截查。陳稱警員指控他「挑機」，更被逾20名警員包圍，查身分證及搜身近10分鐘。劉先生則笑言，「可能我哋多嘢講咗，但係點解唔俾講嘢啫而家？」</p>
+<p>陳先生身穿印有港大校訓「明德格物」的黑色T-shirt，指它已是「絕版」，自己每年只穿一次到維園悼念六四，但他今日到場時已無路可入，只能到附近「飲吓嘢」，但指未來仍會「年年都嚟，唔會變」。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4958zz" title="DSCF7250"><img src="https://live.staticflickr.com/65535/52121709124_7d72d33384_z.jpg" width="640" alt="DSCF7250" /></a></p>
+<p>(20:33)一名身穿支聯會T-shirt「人民不會忘記」的男子手持蠟燭途經記利佐治街時，被多名警員帶到附近商場Fashion Walk的停車場入口截查。該名男子最終在8:45分獲警員放行。</p>
+<p>截查期間，警員拉起橙帶不讓在場記者接近，只准遠距離拍攝及錄影。該名男子獲放行後，警員事隔5分鐘才解開橙帶讓記者離開。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/uY5XXi" title="無標題"><img src="https://live.staticflickr.com/65535/52121273461_b9e0d98627_z.jpg" width="640" alt="無標題" /></a></p>
 <p>(20:34) 入夜後，有個別市民自行到維園及銅鑼灣一帶。晚上八時許，警方宣布擴大封鎖整個維園。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/3A052U" title="IMG_5254"><img src="https://live.staticflickr.com/65535/52121847405_6b4d2f1b54_z.jpg" width="640" alt="IMG_5254" /></a></p>
@@ -26,7 +41,7 @@ author: 獨媒報導
 <p>黃豪賢事後表示該盒坦克車模型為共產黨標誌，今日購自深水埗，是翻版的樂高模型，只需28元，又指「純粹覺得佢幾得意幾好玩」才購買，打算將模型轉贈基層兒童。</p>
 <p>對於首年沒有團體申辦六四燭光晚會，黃豪賢直言在現時的社會環境下是預料之內，又指因警方禁止集會才到銅鑼灣觀察環境：「本身我都唔知有六四依件事，警方話呼籲吖嘛，佢話六四禁咗個集會，我如夢初醒 。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/C97dux" title="IMG_5240"><img src="https://live.staticflickr.com/65535/52121310178_62b168c0fe_z.jpg" width="640" alt="IMG_5240" /></a></p>
-<p>【劉山青被捕】</p>
+<p><strong>劉山青被捕</strong></p>
 <p>(19:00) 劉山青戴上「悼念六四」口罩，穿著「李旺陽」T恤，欲到維園悼念。警方以廣播警告男子有可能干犯「未經批准集結罪」，稱會將其拘捕。該男子表明不會離開，並要求警方解釋原因。警方其後將男子帶入圍封區域調查，稱會將其拘捕。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/6546G4" title="IMG_5237"><img src="https://live.staticflickr.com/65535/52121518094_4028887dfd_z.jpg" width="640" alt="IMG_5237" /></a></p>
 <p>(18:52) 一名穿白衣手持花束中年男人到維園悼念，遭警方以橙帶包圍，並以廣播警告指其有機會犯「未經批准集結」，並要求男子離開。該男子斥「緊張代表懦弱」、「如果政府可以真誠面對，咁民眾就會擁立你」，接著離開。</p>
