--- a/_posts/2022-06-04-PQ-恩爸林先生只想求真相-新北市府斷然拒給關鍵錄音檔.html
+++ b/_posts/2022-06-04-PQ-恩爸林先生只想求真相-新北市府斷然拒給關鍵錄音檔.html
@@ -20,7 +20,7 @@ author: 楊是命
 
 
 
-<div class="wp-block-image is-style-default"><figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8a808e34-284260404_410755784393991_7447214315290699153_n.jpeg" alt="" class="wp-image-103455" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8a808e34-284260404_410755784393991_7447214315290699153_n.jpeg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8a808e34-284260404_410755784393991_7447214315290699153_n-300x225.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8a808e34-284260404_410755784393991_7447214315290699153_n-768x576.jpeg 768w" sizes="(max-width: 600px) 100vw, 600px" /><figcaption>針對新北市府至今仍拒絕提供完整資料。左起新北市消防局局長黃德清、衛生局局長陳潤秋、新北市長侯友宜。<br>（圖／中央社）</figcaption></figure></div>
+<div class="wp-block-image is-style-default"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8a808e34-284260404_410755784393991_7447214315290699153_n.jpeg" alt="" class="wp-image-103455" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8a808e34-284260404_410755784393991_7447214315290699153_n.jpeg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8a808e34-284260404_410755784393991_7447214315290699153_n-300x225.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8a808e34-284260404_410755784393991_7447214315290699153_n-768x576.jpeg 768w" sizes="(max-width: 600px) 100vw, 600px" /><figcaption>針對新北市府至今仍拒絕提供完整資料。左起新北市消防局局長黃德清、衛生局局長陳潤秋、新北市長侯友宜。<br>（圖／中央社）</figcaption></figure></div>
 
 
 
