--- a/_posts/2022-06-04-INITIUM-不想回忆-未敢忘记-在香港-在台湾-在海外-看到悼念六四的那点光.html
+++ b/_posts/2022-06-04-INITIUM-不想回忆-未敢忘记-在香港-在台湾-在海外-看到悼念六四的那点光.html
@@ -19,7 +19,7 @@ author: 余美霞,李易安,王纪尧
 <h2>人民自发悼念，警方驱赶清场</h2>
 <p>六四周年的前几天，警方召开记者会，指有人涉嫌煽动非法集结，并于3日晚11时封锁铜锣湾维园6个足球场和篮球场范围，较2021年更早封锁往年集会的主要场地。</p>
 <p>6月4日清晨伊始，维园已被层层铁马包围，主要入口均有大批身穿防刺背心的警员驻守及巡逻。维园外停放十数辆警车。下午4时，铜锣湾维园一带布有上百警力，主要街道停有警车。通往维园方向的东角道被橙带围封，警方设置记者区，记者只能在指定范围进行直播和拍摄。前支联会常委赵恩来手持花束，在东角道被警察搜身、要求出示身分证，其后被要求离开。</p>
-<p>入夜7时半，警方宣布整个委员和外围行人路为“保安行动区”，布置大量人力在维园入口驱散和截断行人，不少市民只能离开维园入口，或绕着维园外侧行走。因为无法进入维园，甚至无法靠近，许多市民走到维园对面的图书馆，隔着一条马路，从高处拍下空荡荡的维园。</p>
+<p>入夜7时半，警方宣布整个维园和外围行人路为“保安行动区”，布置大量人力在维园入口驱散和截断行人，不少市民只能离开维园入口，或绕着维园外侧行走。因为无法进入维园，甚至无法靠近，许多市民走到维园对面的图书馆，隔着一条马路，从高处拍下空荡荡的维园。</p>
 <p>社民连主席陈宝莹、外务副主席周嘉发及成员余炜彬，于晚上7时半到达铜锣湾记利佐治街。3人一字横排，戴着画上交叉（X）符号的纯白口罩，面向怡和街进行默站。3人仅站立数分钟，随即被在场警员带往封锁区进行盘问、搜身及登记个人资料，陈宝莹被警方盘问期间，提及默站是因为悼念六四，无意煽动任何人加入行动。惟封锁区内的指挥官不接受陈宝莹的解释，喝令即时离开，并称如继续留在现场及进入维园范围，将即时以煽动他人参与未经许可的非法集结罪作出拘捕。3人决定往天后方向离开。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220604-whatsnew-hongkong-taiwan-world-june-fourth/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/06/f5695ddc11ab48a2b89c32b3b274ce5c.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年6月4日，香港，社民连成员余炜彬被警方车离现场，其后获释。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2022年6月4日，香港，社民连成员余炜彬被警方车离现场，其后获释。<span class="credit">摄：林振东/端传媒</span></figcaption></figure>
@@ -50,7 +50,7 @@ author: 余美霞,李易安,王纪尧
 
 <p>不时有市民被警察带进封锁区搜身、检查背包。晚上9点10分，一位身著黑衣、提著写有“撑住五十年不变”等文字的帆布袋的婆婆被警察带进封锁区域检查，婆婆随后跌倒在地及哭喊，最终被警察带上警车。</p>
 <p>社运人士刘山青则因在维园内穿着写有“悼念六四”字样的李旺阳T恤，被警方以“煽惑他人参与未经批准集结”为由拘捕，被带返北角警署。</p>
-<p>警方指，截至晚上11时半，共拘捕5男1金，年龄介乎19至80岁，分别涉嫌“煽惑他人参与未经批准集结”、“阻碍警务人员执行职务”及“藏有攻击性武器”。维园则在6月5日0时30分解封。</p>
+<p>警方指，截至晚上11时半，共拘捕5男1女，年龄介乎19至80岁，分别涉嫌“煽惑他人参与未经批准集结”、“阻碍警务人员执行职务”及“藏有攻击性武器”。维园则在6月5日0时30分解封。</p>
 <p>此前，零星拘捕仍在发生。警方于6月3日早上以涉嫌“煽惑他人意图造成身体严重伤害”罪名，拘捕一名59岁保安员，称他在社交平台恶意发布针对政府及警队的仇恨言论，包括鼓吹于6月4日进行非法集会、趁机进行犯法行为包括杀警。</p>
 <p>而往年六四前夕，有艺术家会在铜锣湾以行为艺术方式悼念六四。3日晚，艺术家三木表演作品《离骚》，躺在地上，用嘴咬住高长的杂草。艺术家陈美彤则使用马铃薯进行行为艺术，期间被警察制止，疑涉公众地方行为不检被捕。</p>
 <p>4日下午，有女版长毛之称的雷玉莲，亦被带上警车。</p>
@@ -61,7 +61,7 @@ author: 余美霞,李易安,王纪尧
 <p>往年，不同外国驻港领事馆会在Facebook发帖悼念六四。据《明报》<a href="https://news.mingpao.com/pns/%E8%A6%81%E8%81%9E/article/20220604/s00001/1654279949107/%E5%A4%96%E4%BA%A4%E5%85%AC%E7%BD%B2%E7%9D%80%E5%A4%9A%E5%9C%8B%E9%A0%98%E4%BA%8B%E9%A4%A8%E5%8B%BF%E8%A1%A8%E6%85%8B">报导</a>，今年六四前夕，中国外交部驻港特派员公署提醒多个西方国家的驻港领事馆，勿对六四议题表态。公署又向部分曾悼念六四的西方驻港领事馆中人提及，香港过去悼念六四活动只是由“非常少数反华、对中国政府有敌意的人士”举办的非法行为，或称六四事件已成历史，毋须记住。</p>
 <p>不过，多个领事馆仍在社交媒体上发布与六四相关内容。美国驻港澳总事馆于4日早晨，将Facebook页面的封面图片更换为港大国殇之柱。澳大利亚驻港澳总领事馆亦在Facebook发帖，悼念于六四事件中丧失生命的人，并称秉持对普世人权的承诺，“支持每个人享有言论自由、结社自由、政治参与、以及宗教或信仰自由的权利。”</p>
 <p>波兰驻港总领事馆则发贴指其为欧盟最大的蜡烛生产国。至晚上，欧盟驻港澳办事处亦于Facebook<a href="https://www.facebook.com/EUOfficeHongKongMacao/posts/pfbid0UMTDB2wibX4rhY4NQ9Jfdvo48Jovx9SensuN47HAsqp9gY8iWVXESrPGZVacLtVXl?__cft__%5B0%5D=AZU1xxo3E5_THcTqSTdgFxVye2y9bOgOKIAn9ii4dnezSKJX6aRU4sIDxyoGEONjjpsiQwlMFNV9OiL5vWCqtf3bRNSozVy7UrL9KM3vz63NBpBcGr_X1Tjdl6MoNcdqJrExHI2VVSFHInAxUueEsxLgG9uE8wcFcS1t-DM7A4HBgw&__tn__=,O,P-R">发文</a>，贴上一张以多颗灯黄烛光配香港夜景的照片，文中写道“以此纪念1989年六四天安门广场镇压33周年”，又表示欧盟“时刻与全球各地捍卫人权的人士站在一起”。</p>
-<p>美国国务卿布林肯则发表声明，称曾于1989年参与示威、争取民主自由法河的人民不会被遗忘，又提到香港悼念六四被中国及港府禁止，重申会继续推动就中国在香港、新疆、西藏等地侵犯人权行为问责。外交部驻港公署则回应指，美方以人权自由为幌子干涉中国内政，并对香港人权法治说三道四，中方坚决反对及严厉谴责。公署重申，香港正不断巩固由乱到治的良好局面，个别西方国家妄图藉炒作30多年前的政治事件，对中国搞意识形态渗透。</p>
+<p>美国国务卿布林肯则发表声明，称曾于1989年参与示威、争取民主自由法治的人民不会被遗忘，又提到香港悼念六四被中国及港府禁止，重申会继续推动就中国在香港、新疆、西藏等地侵犯人权行为问责。外交部驻港公署则回应指，美方以人权自由为幌子干涉中国内政，并对香港人权法治说三道四，中方坚决反对及严厉谴责。公署重申，香港正不断巩固由乱到治的良好局面，个别西方国家妄图藉炒作30多年前的政治事件，对中国搞意识形态渗透。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220604-whatsnew-hongkong-taiwan-world-june-fourth/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/06/1155f3fe7ea340c1bb663d5f72050f38.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年6月4日，香港，天主教香港教区辅理主教夏志诚于五旬节主日(节日) 提前弥撒讲话。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年6月4日，香港，天主教香港教区辅理主教夏志诚于五旬节主日(节日) 提前弥撒讲话。<span class="credit">摄：Nasha Chan/端传媒</span></figcaption></figure>
 
