--- a/_posts/2022-06-05-PQ-台灣好朋友斯洛伐克訪團抵台-國會副議長-以行動支持台灣.html
+++ b/_posts/2022-06-05-PQ-台灣好朋友斯洛伐克訪團抵台-國會副議長-以行動支持台灣.html
@@ -44,7 +44,7 @@ author: 呂酒林
 
 
 
-<figure class="wp-block-image size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/ef327f32-1153x768_20220605000010.jpg" alt="" class="wp-image-103529" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/ef327f32-1153x768_20220605000010.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/ef327f32-1153x768_20220605000010-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/ef327f32-1153x768_20220605000010-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>斯洛伐克國會副議長勞倫契克（Milan Laurencik）（前右4）與聯合訪問團成員，5 日上午抵達桃園國際機場，由外交部政務次長曾厚仁（前左3）代表接機。（圖／中央社）</figcaption></figure>
+<figure class="wp-block-image size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/ef327f32-1153x768_20220605000010.jpg" alt="" class="wp-image-103529" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/ef327f32-1153x768_20220605000010.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/ef327f32-1153x768_20220605000010-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/ef327f32-1153x768_20220605000010-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>斯洛伐克國會副議長勞倫契克（Milan Laurencik）（前右4）與聯合訪問團成員，5 日上午抵達桃園國際機場，由外交部政務次長曾厚仁（前左3）代表接機。（圖／中央社）</figcaption></figure>
 
 
 
